--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ fmod_editor.log
 fmod_editor.log
 fmod_editor.log
 fmod_editor.log
+
+Assets/Partícles packages/Particle Dissolve Shader by Moonflower Carnivore\.meta
+
+Assets/PostProcessing/Partícles packages/Particle Dissolve Shader by Moonflower Carnivore\.meta
